fix flex justify center and limit white space to only 25px

--- a/style.css
+++ b/style.css
@@ -1,158 +1,189 @@
 .hero {
-  font-family: "Roboto Slab", serif;
-  background-color: #232830;
-  color: #eeefef;
+    font-family: "Roboto Slab", serif;
+    background-color: #232830;
+    color: #eeefef;
 }
+
 .main-header {
-  display: flex;
-  justify-content: space-between;
-  margin: 0px 30px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 30px;
 }
+
 .header-2 {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
+
 .header-nav {
-  margin-left: 20px;
+    margin-left: 20px;
 }
+
 .title {
-  text-align: center;
+    text-align: center;
 }
+
 .logo {
-  width: 150px;
+    width: 150px;
 }
+
 .op {
-  color: #fe7575;
-  font-style: italic;
+    color: #fe7575;
+    font-style: italic;
 }
+
 .sub {
-  margin: 0px;
+    margin: 0px;
 }
+
 .line {
-  border-bottom: 3px solid #2a2e35;
-  margin-top: 20px;
+    border-bottom: 3px solid #2a2e35;
+    margin-top: 20px;
 }
+
 .nav {
-  color: #737577;
-  display: flex;
-  justify-content: center;
-  font-size: 13px;
-  font-style: italic;
+    color: #737577;
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    font-style: italic;
 }
+
 .nav-list {
-  margin-left: 60px;
-  margin-right: 20px;
+    margin-left: 60px;
+    margin-right: 20px;
 }
+
 .content {
-  display: flex;
-  margin: 5px 5px 0px 0px;
+    display: flex;
+    justify-content: center;
+    margin: 5px 5px 0px 0px;
 }
 
 .news {
-  width: 320px;
-  height: 380px;
-  background-color: white;
-  margin: 50px;
-  border-radius: 10px;
-  color: black;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+    width: 320px;
+    height: 380px;
+    background-color: white;
+    margin: 50px;
+    border-radius: 10px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
+
 .cover {
-  width: 280px;
-  margin-top: 15px;
-  border-radius: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+    width: 280px;
+    margin-top: 15px;
+    border-radius: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
+
 .title-news {
-  font-size: 20px;
-  font-weight: bold;
-  text-align: start;
-  margin: 8px 16px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: start;
+    margin: 8px 16px;
 }
+
 .news-content {
-  font-size: 13px;
-  text-align: start;
-  margin: 8px 16px;
+    font-size: 13px;
+    text-align: start;
+    margin: 8px 16px;
 }
+
 .date {
-  font-size: 13px;
-  text-align: start;
-  margin: 8px 16px;
+    font-size: 13px;
+    text-align: start;
+    margin: 8px 16px;
 }
+
 .page-num {
-  display: flex;
-  justify-content: center;
-  color: #737577;
-  font-style: italic;
+    display: flex;
+    justify-content: center;
+    color: #737577;
+    font-style: italic;
 }
+
 .no {
-  margin-top: 60px;
-  margin-left: 20px;
-  margin-right: 20px;
+    margin-top: 60px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
+
 .no-2 {
-  border-top: 2px solid #fe7575;
-  color: #fe7575;
+    border-top: 2px solid #fe7575;
+    color: #fe7575;
 }
+
 .below {
-  margin-top: 150px;
+    margin-top: 25px;
 }
+
 .social {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
 }
+
 .left {
-  display: flex;
+    display: flex;
 }
+
 .right {
-  background-color: #4699e0;
-  height: 30px;
-  margin-left: auto;
-  margin-right: 20px;
-  padding: 0px 5px 8px 5px;
-  font-size: 12px;
-  margin-top: 10px;
-  border-radius: 20px;
+    background-color: #4699e0;
+    height: 30px;
+    margin-left: auto;
+    margin-right: 20px;
+    padding: 0px 5px 8px 5px;
+    font-size: 12px;
+    margin-top: 10px;
+    border-radius: 20px;
 }
+
 .ig {
-  background-color: #4699e0;
-  padding: 5px;
-  border-radius: 6px;
-  width: 75px;
-  font-size: 12px;
+    background-color: #4699e0;
+    padding: 5px;
+    border-radius: 6px;
+    width: 75px;
+    font-size: 12px;
 }
+
 .text-foot {
-  margin-left: 10px;
-  margin-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+
 .image-2 {
-  width: 260px;
-  height: 165px;
-  margin-left: 28px;
+    width: 260px;
+    height: 165px;
+    margin-left: 28px;
 }
+
 .image-3 {
-  width: 260px;
-  height: 165px;
-  margin-left: 30px;
+    width: 260px;
+    height: 165px;
+    margin-left: 30px;
 }
+
 .image-4 {
-  width: 260px;
-  height: 165px;
-  margin-left: 28px;
+    width: 260px;
+    height: 165px;
+    margin-left: 28px;
 }
+
 .image-6 {
-  width: 280px;
-  height: 165px;
-  margin-left: 22px;
-  margin-bottom: 15px;
+    width: 280px;
+    height: 165px;
+    margin-left: 22px;
+    margin-bottom: 15px;
 }
+
 .nav-logo-2 {
-  margin-left: 10px;
+    margin-left: 10px;
 }
+
 .nav-logo-1 {
-  margin-top: 3px;
+    margin-top: 3px;
 }
